--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -123,20 +123,19 @@
     }
 
     #navigation {
-        width: 94%;
-        max-width: calc(1280 / 16 * 1rem);
+        background-color: #fff;
+        width: 100%;
+        border-bottom: 1px solid #000;
+        max-width: 100%;
         /* prevents padding from affecting height and width */
         box-sizing: border-box;
         /* 11px - 24px */
-        padding: clamp(0.75rem, 2vw, 1.5rem);
-        /* 11px - 24px */
-        border-radius: clamp(0.75rem, 2vw, 1.5rem);
         position: fixed;
-        top: calc(32 / 16 * 1rem);
-        left: 50%;
+        top: 0;
+        left: 0;
         z-index: 10000;
-        transform: translateX(-50%);
-        transition: top 0.3s, border-radius 0.3s, width 0.3s, max-width 0.3s;
+        transform: none;
+        transition: none;
 
         &:before {
             /* background color */
@@ -151,9 +150,9 @@
             display: block;
             position: absolute;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            transition: transform 0.2s, border-radius 0.3s ease-in-out;
+            left: 0;
+            transform: none;
+            transition: none;
         }
 
         &.active {
@@ -178,9 +177,8 @@
         }
 
         .container {
-            width: 100%;
             display: flex;
-            justify-content: flex-end;
+            justify-content: space-between;
             align-items: center;
             // gap: calc(24 / 16 * 1rem);
         }
@@ -208,11 +206,10 @@
 
         .toggle {
             width: calc(56 / 16 * 1rem);
-            height: calc(56 / 16 * 1rem);
             margin: 0 0 0 auto;
-            background-color: #1a1a1a;
             border: none;
             // border-radius: calc(4 / 16 * 1rem);
+            background-color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -283,7 +280,7 @@
         .line {
             width: 100%;
             height: 1px;
-            background-color: #fafbfc;
+            background-color: #000;
             border-radius: 1px;
             position: absolute;
             left: 50%;
@@ -719,7 +716,6 @@
             text-decoration: none;
             width: calc(32 / 16 * 1rem);
             height: calc(32 / 16 * 1rem);
-            background-color: #f7f7f7;
             border-radius: 50%;
             display: flex;
             justify-content: center;
@@ -855,11 +851,12 @@ Dark Mode Styles
             background-color: var(--dark);
         }
         #navigation {
+            background-color: var(--dark);
             .logo {
                 filter: grayscale(1) brightness(1000%);
             }
             .toggle {
-                background-color: #fff;
+                background-color: var(--dark);
             }
             .phone {
                 color: var(--bodyTextColorWhite);
@@ -871,7 +868,7 @@ Dark Mode Styles
                 filter: grayscale(1) brightness(1000%);
             }
             .line {
-                background-color: #000;
+                background-color: #fff;
             }
             .li-link {
                 color: var(--bodyTextColorWhite);
