change contact-inline to contact

--- a/src/_includes/components/contact.html
+++ b/src/_includes/components/contact.html
@@ -2,7 +2,7 @@
 <!--                Contact Form                  -->
 <!-- ============================================ -->
 
-<section id="contact-inline">
+<section id="contact">
     <link rel="stylesheet" href="/assets/css/contact.css" />
     <div class="container">
         <div class="left-section">
