--- a/src/assets/sass/contact.scss
+++ b/src/assets/sass/contact.scss
@@ -1,6 +1,6 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-    #contact-inline {
+    #contact {
         border-top: 1px solid #000;
         padding: var(--sectionPadding);
 
@@ -189,7 +189,7 @@
 
 /* Tablet - 700px */
 @media only screen and (min-width: 43.75rem) {
-    #contact-inline {
+    #contact {
         #form {
             display: flex;
             justify-content: space-between;
@@ -218,7 +218,7 @@
 
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 64rem) {
-    #contact-inline {
+    #contact {
         .container {
             max-width: calc(1280/16 * 1rem);
             flex-direction: row;
@@ -256,7 +256,7 @@
 /* Dark Mode */
 @media only screen and (min-width: 0rem) {
     body.dark-mode {
-        #contact-inline {
+        #contact {
             border-top: 1px solid #fff;
             .text,
             .title {
