--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -455,7 +455,7 @@
     body.dark-mode {
         #intro {
             border-top: 1px solid #fff;
-            
+
             .icon {
                 filter: invert(100%);
             }
@@ -466,7 +466,6 @@
                     background-color: var(--bodyTextColorWhite);
                 }
             }
-
 
             .faq-item.active .button:before,
             .faq-item.active .button:after {
@@ -480,7 +479,6 @@
             .item-p {
                 color: var(--bodyTextColorWhite);
             }
-
 
             .floater {
                 opacity: 0.1;
@@ -857,6 +855,11 @@
                 width: 100%;
                 object-fit: cover;
             }
+
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
         }
 
         .picture-1 {
@@ -1152,6 +1155,214 @@
             .h3,
             .number {
                 color: var(--primaryLight);
+            }
+        }
+    }
+}
+
+/*-- -------------------------- -->
+<---          Gallery           -->
+<--- -------------------------- -*/
+
+/* Mobile */
+@media only screen and (min-width: 0rem) {
+    #gallery {
+        border-top: 1px solid #000;
+        padding: var(--sectionPadding);
+
+        .container {
+            width: 100%;
+            max-width: calc(1280 / 16 * 1rem);
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
+        }
+
+        .content {
+            /* set text align to left if content needs to be left aligned */
+            text-align: left;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: flex-start;
+        }
+
+        .text {
+            margin-bottom: calc(16 / 16 * 1rem);
+            max-width: calc(630 / 16 * 1rem);
+            &:last-of-type {
+                margin-bottom: calc(32 / 16 * 1rem);
+            }
+        }
+
+        .link {
+            font-size: calc(15 / 16 * 1rem);
+            font-weight: 700;
+            text-decoration: none;
+            line-height: 1.5em;
+            width: calc(100 / 16 * 1rem);
+            color: var(--headerColor);
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            &:before {
+                content: "";
+                position: absolute;
+                display: block;
+                height: 2px;
+                width: 100%;
+                background: currentColor;
+                opacity: 1;
+                bottom: calc(-3 / 16 * 1rem);
+                left: 0;
+            }
+            &:hover {
+                svg {
+                    transform: translateX(0.4375rem);
+                }
+            }
+
+            svg {
+                width: calc(24 / 16 * 1rem);
+                height: calc(24 / 16 * 1rem);
+                transition: transform 0.3s;
+            }
+        }
+
+        .image-group {
+            width: 100%;
+            height: auto;
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            grid-template-rows: repeat(6, 31vw);
+            /* 16px - 20px */
+            gap: clamp(0.5rem, 1.5vw, 1.25rem);
+        }
+
+        .picture {
+            display: block;
+            position: relative;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .picture-1 {
+            grid-column: 1 / span 6;
+            grid-row: span 1;
+        }
+
+        .picture-2 {
+            grid-column: 7 / span 6;
+            grid-row: span 1;
+        }
+
+        .picture-3 {
+            grid-column: 1 / span 12;
+            grid-row: 2 / span 2;
+        }
+
+        .picture-4 {
+            grid-column: 1 / span 12;
+            grid-row: 4 / span 2;
+        }
+
+        .picture-5 {
+            grid-column: 1 / span 6;
+            grid-row: 6 / span 1;
+        }
+
+        .picture-6 {
+            grid-column: 7 / span 6;
+            grid-row: 6 / span 1;
+        }
+    }
+}
+
+/* Tablet */
+@media only screen and (min-width: 48rem) {
+    #gallery {
+        .content {
+            flex-direction: row;
+            justify-content: space-between;
+            gap: calc(48 / 16 * 1rem);
+        }
+
+        .flex {
+            min-width: 45%;
+        }
+
+        .image-group {
+            /* 116px - 210px */
+            grid-template-rows: repeat(3, clamp(7.25rem, 16vw, 13.125rem));
+        }
+
+        .picture-1 {
+            grid-column: 1 / span 3;
+            grid-row: 1 / span 1;
+        }
+
+        .picture-2 {
+            grid-column: 4 / span 3;
+            grid-row: 1 / span 1;
+        }
+
+        .picture-3 {
+            grid-column: 1 / span 6;
+            grid-row: 2 / span 2;
+        }
+
+        .picture-4 {
+            grid-column: 7 / span 6;
+            grid-row: 1 / span 2;
+        }
+
+        .picture-5 {
+            grid-column: 7 / span 3;
+            grid-row: 3 / span 1;
+        }
+
+        .picture-6 {
+            grid-column: 10 / span 3;
+            grid-row: 3 / span 1;
+        }
+    }
+}
+
+/* Dark mode */
+@media only screen and (min-width: 0rem) {
+    body.dark-mode {
+        #gallery {
+            border-top: 1px solid #fff;
+            .title,
+            .text {
+                color: var(--bodyTextColorWhite);
+            }
+
+            .link {
+                color: var(--bodyTextColorWhite);
+
+                &:before {
+                    background: var(--bodyTextColorWhite);
+                }
+
+                svg {
+                    path {
+                        fill: var(--bodyTextColorWhite);
+                    }
+                }
             }
         }
     }
