feat: Add about and contact to nav
- Update resume

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -9,10 +9,16 @@
         <a href="/" class="link">Home</a>
       </li>
       <li class="li">
+        <a href="/about" class="link">About Me</a>
+      </li>
+      <li class="li">
         <a href="/project" class="link">Projects</a>
       </li>
       <li class="li">
         <a href="/blog" class="link">Blogs</a>
+      </li>
+      <li class="li">
+        <a href="/#contact" class="link">Contact</a>
       </li>
     </ul>
     <span class="copyright">© 2024 - {% year %} Copyright</span>
