--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -18,10 +18,16 @@
             <a href="/" class="li-link"> Home </a>
           </li>
           <li class="li">
+            <a href="/about" class="li-link"> About Me </a>
+          </li>
+          <li class="li">
             <a href="/project" class="li-link"> Projects </a>
           </li>
           <li class="li">
             <a href="/blog" class="li-link"> Blogs </a>
+          </li>
+          <li class="li">
+            <a href="/#contact" class="li-link"> Contact </a>
           </li>
         </ul>
       </div>
