--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -9,6 +9,7 @@
   --bodyTextColorWhite: #fff;
   --accent: #6cb274;
   --emphasis: #adebad;
+  --overlay: rgba(108, 178, 116, .9);
   --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
   --topperFontSizeSmall: clamp(0.5rem, 1vw, 0.75rem);
   --headerFontSize: clamp(1.9375rem, 3.9vw, 3.0625rem);
