--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -487,7 +487,6 @@
     }
 }
 
-
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #experience {
@@ -1095,6 +1094,51 @@
             flex-direction: column;
             /* centers content horizontally, set to flex-start to left align */
             align-items: flex-start;
+        }
+
+        .img-hover {
+            position: relative;
+            display: inline-block;
+            overflow: hidden;
+        }
+
+        .img-hover img {
+            display: block;
+            width: 100%;
+            height: auto;
+            transition: transform 0.3s ease;
+        }
+
+        .img-hover:hover img {
+            transform: scale(1.05); /* optional zoom effect */
+        }
+
+        .img-hover .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: var(--overlay);
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .img-hover:hover .overlay {
+            opacity: 1;
+        }
+
+        .overlay-text {
+            font-size: 1rem;
+            padding: 1rem;
+            text-align: center;
+            color: var(--bodyTextColorWhite);
+            font-family: "Nexa", Arial, sans-serif;
+            font-weight: 700;
         }
 
         .text {
