--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -16,6 +16,7 @@
     --accent: #6cb274;
     // --emphasis: rgba(108, 178, 116, 0.2);
     --emphasis: #adebad;
+    --overlay: rgba(108, 178, 116, .9);
 
     // Typography
     --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
