fix(footer): Content

--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -18,6 +18,6 @@
         <a href="/#contact" class="link">Contact</a>
       </li>
     </ul>
-    Designed and built by me :D <span class="copyright">© 2024 - {% year %} Copyright</span>
+    <span class="copyright">Designed and built by me :D © 2024 - {% year %} Copyright</span>
   </div>
 </footer>
