--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -117,8 +117,9 @@
     justify-content: center;
     align-items: center;
     min-height: 30vh;
-    padding-top: 3.125rem;
-    border-bottom: 2px solid #fff;
+    margin-top: 6rem;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
   }
   #int-hero picture {
     z-index: -2;
@@ -136,36 +137,32 @@
     width: 100%;
     object-fit: cover;
   }
-  #int-hero h1 {
+  #int-hero .container {
     position: relative;
-    margin: 0 auto;
-    margin-top: 4.375rem;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 1rem;
     margin-bottom: 1.875rem;
-    max-width: 31.25rem;
-    width: 96%;
-    font-size: 2.1333333333rem;
-    color: #fff;
-    text-align: center;
+    max-width: 80rem;
+    width: 90%;
+  }
+  #int-hero h1 {
+    width: 100%;
+    color: var(--bodyTextColor);
+    font-size: clamp(3rem, 10vw, 4rem);
+    margin-bottom: 2rem;
+    text-align: left;
+    font-weight: 200;
   }
   #int-hero p {
-    display: block;
-    margin: auto;
-    margin-bottom: 1.875rem;
-    max-width: 25rem;
-    width: 96%;
-    color: #fff;
-    text-align: center;
-  }
-  #int-hero:before {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    display: block;
-    background: #000;
-    height: 100%;
-    width: 100%;
+    margin-bottom: clamp(2.5rem, 4vw, 3rem);
+    color: var(--bodyTextColor);
+    font-size: clamp(1rem, 2vw, 2rem);
+    max-width: 58.75rem;
+    font-weight: 400;
+    margin-left: auto;
+    text-align: right;
   }
 }
 /* Tablet */
@@ -176,15 +173,20 @@
   #int-hero h1 {
     font-size: 4rem;
   }
+  #int-hero .container {
+    margin-top: 4.375rem;
+  }
 }
-/* Small Desktop */
-@media only screen and (min-width: 64rem) {
-  #int-hero {
-    background-attachment: fixed;
-    min-height: 18.75rem;
-    height: auto;
-    padding: 6rem 0 4rem;
-    font-size: inherit;
+/* Dark Mode */
+@media only screen and (min-width: 0rem) {
+  body.dark-mode #int-hero {
+    background-color: var(--dark);
+    border-bottom: 1px solid #fff;
+    border-top: 1px solid #fff;
+  }
+  body.dark-mode #int-hero h1,
+  body.dark-mode #int-hero p {
+    color: var(--bodyTextColorWhite);
   }
 }
 /*-- -------------------------- -->
