--- a/src/_includes/components/contact.html
+++ b/src/_includes/components/contact.html
@@ -10,11 +10,12 @@
                 <span class="topper">Contact Me</span>
                 <h2 class="title">Get in Touch</h2>
                 <p class="text">
+                    I’m open to freelance and consulting around machine
+                    learning, automation, and geospatial.
+                    <br /><br />
                     Whether you're looking to build an AI system, explore
-                    automation for ESG reporting, or chat about data workflows —
-                    I’d love to hear from you. I’m open to freelance,
-                    consulting, and collaborations around machine learning,
-                    geospatial intelligence, or climate tech.
+                    automation for ESG reporting, or chat about data workflows,
+                    I’d love to hear from you.
                 </p>
             </div>
             <form id="form" name="Contact Form" method="post">
