--- a/src/assets/sass/blog.scss
+++ b/src/assets/sass/blog.scss
@@ -268,7 +268,7 @@
         .blog-mainImage {
             position: relative;
             display: block;
-            border-radius: calc(8 / 16 * 1em) calc(8 / 16 * 1em) 0 0;
+            // border-radius: calc(8 / 16 * 1em) calc(8 / 16 * 1em) 0 0;
             height: clamp(200px, 30vw, 400px);
             width: 100%;
             overflow: hidden;
@@ -284,9 +284,9 @@
         }
 
         .article-group {
-            border: 1px solid #ebebeb;
-            border-radius: 0 0 calc(8 / 16 * 1em) calc(8 / 16 * 1em);
-            padding: clamp(30px, 5vw, 50px);
+            // border: 1px solid #ebebeb;
+            // border-radius: 0 0 calc(8 / 16 * 1em) calc(8 / 16 * 1em);
+            padding: clamp(30px, 5vw, 50px) 5px;
         }
 
         .blog-author-img {
@@ -324,7 +324,7 @@
         .blog-dot {
             display: block;
             border-radius: 50%;
-            background-color: var(--primary);
+            background-color: var(--emphasis);
             height: 3px;
             width: 3px;
         }
@@ -586,7 +586,6 @@
         .blog-mainImage {
             position: relative;
             display: block;
-            border-radius: calc(8 / 16 * 1em);
             margin-bottom: calc(50 / 16 * 1em);
             height: clamp(200px, 30vw, 400px);
             width: 100%;
@@ -637,7 +636,7 @@
         .blog-dot {
             display: block;
             border-radius: 50%;
-            background-color: #fe4f70;
+            background-color: var(--emphasis);
             height: 3px;
             width: 3px;
         }
