--- a/src/assets/sass/header.scss
+++ b/src/assets/sass/header.scss
@@ -614,6 +614,8 @@
             border-radius: 0;
             top: 0;
             border-bottom: 1px #000 solid;
+            height: calc(72 / 16 * 1rem);
+            padding: 0;
         }
     }
 
@@ -636,7 +638,7 @@
         left: 50%;
         z-index: 10000;
         transform: translateX(-50%);
-        transition: top 0.3s, border-radius 0.3s, width 0.3s, max-width 0.3s;
+        transition: height 0.3s, padding 0.3s;
 
         .container {
             width: 100%;
