--- a/src/_includes/components/contact.html
+++ b/src/_includes/components/contact.html
@@ -127,11 +127,23 @@
                     </div>
                 </li>
             </ul>
-            <iframe
+            <!-- Calendly inline widget begin -->
+            <div
+                class="calendly-inline-widget"
+                data-url="https://calendly.com/hdmquan/30min?hide_gdpr_banner=1"
+                style="min-width: 320px; height: 700px"
+            ></div>
+            <script
+                type="text/javascript"
+                src="https://assets.calendly.com/assets/external/widget.js"
+                async
+            ></script>
+            <!-- Calendly inline widget end -->
+            <!-- <iframe
                 width="425"
                 height="350"
                 src="https://www.openstreetmap.org/export/embed.html?bbox=144.95182156562808%2C-37.819963312243964%2C144.95619356632236%2C-37.816492655948004&amp;layer=cyclosm&amp;marker=-37.81822800449354%2C144.9540075659752"
-            ></iframe>
+            ></iframe> -->
         </div>
     </div>
 </section>
