--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -81,9 +81,9 @@
 
         <!-- Stylesheets & Scripts -->
         <link rel="stylesheet" href="/assets/css/root.css" />
-        <link rel="stylesheet" href="/assets/css/header.css" />
+        <link rel="stylesheet" href="/assets/css/components/header.css" />
         <link rel="stylesheet" href="/assets/css/dark.css" />
-        <link rel="stylesheet" href="/assets/css/footer.css" />
+        <link rel="stylesheet" href="/assets/css/components/footer.css" />
         <script defer src="/assets/js/dark.js"></script>
         <script defer src="/assets/js/nav.js"></script>
 
