--- a/src/_includes/components/contact.html
+++ b/src/_includes/components/contact.html
@@ -3,7 +3,7 @@
 <!-- ============================================ -->
 
 <section id="contact">
-    <link rel="stylesheet" href="/assets/css/contact.css" />
+    <link rel="stylesheet" href="/assets/css/components/contact.css" />
     <div class="container">
         <div class="left-section">
             <div class="content">
